--- a/css/style.css
+++ b/css/style.css
@@ -90,8 +90,9 @@ font-size: 22px;
 
 .section-title h3 {
 font-size: 80px;
+margin-top: 8%;
 margin-left: 20px;
-margin-bottom: 5%;
+margin-bottom: 8%;
 font-family: 'Raleway', sans-serif;
 color: red;
 font-weight: 100;
