--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,14 @@ color: red;
 text-decoration: none;
 }
 
+p{
+	font-size: 14px;
+	
+}
+
+li{
+	font-size: 14px;
+}
 
 .jumbotron{
 	background-color: #DC2E2A;
@@ -21,72 +29,7 @@ text-decoration: none;
 	margin-bottom: 5%;
 }
 
-.column p {
-  font-family: 'Roboto', sans-serif;
-  font-size: 14px;
-}
 
-.columnBoxTop {
-	clear: both;
-}
-
-
-.EditorialCalendar{
-	clear: both;
-}
-
-.right {
-float: right;
-padding: 0;
-
-}
-
-.column {
-width: 30%;
-text-align: center;
-float: left;
-padding: 0 10px;
-margin-bottom: 10%;
-}
-
-.columns {
-width: 50%;
-text-align: center;
-float: left;
-padding: 20 20px;
-}
-
-.introduction a {
-  color: black;
-  text-decoration: none;
-}
-
-.introduction img {
-float: left;
-}
-
-.introduction p {
-padding: 10px;
-font-family: 'Raleway', sans-serif;
-font-size: 15px;
-    margin-top: 5%;
-    margin-left: 20%;
-}
-
-
-.editorialMission {
-clear: both;
-}
-
-.DemandGeneration {
-clear: both;
-}
-
-
-.introduction {
-height: 120px;
-font-size: 22px;
-}
 
 .section-title h3 {
 font-size: 80px;
@@ -99,107 +42,5 @@ font-weight: 100;
 }
 
 
-.editorialLeadership p {
-	font-family: 'Raleway', sans-serif;
-}
 
 
-
-
-.editorialMission p {
-margin-left: 300px;
-line-height: 20px;
-font-family: 'Raleway', sans-serif;
-font-size: 16px;
-}
-
-
-
-
-.audience h3 {
-font-size: 120px;
-margin-left: 20px;
-font-family: 'Raleway', sans-serif;
-color: red;
-font-weight: 100;
-}
-
-.audience img {
-margin-left: 200px;
-}
-
-
-.CustomContent p {
-	width: 50%;
-}
-
-.CustomContent{
-	clear: both;
-}
-
-.audience ul li {
-font-size: 12px;
-line-height: 25px;
-margin-left: 80px;
-font-family: 'Raleway', sans-serif;
-}
-
-.reach h4 {
-font-size: 120px;
-margin-left: 20px;
-font-family: 'Raleway', sans-serif;
-color: red;
-font-weight: 100;
-}
-
-.reach img {
-margin-left: 80px;
-padding: 10px;
-}
-
-.reach p{
-	padding: 10px;
-font-family: 'Raleway', sans-serif;
-}
-
-
-.reach li {
-font-size: 19px;
-line-height: 25px;
-margin-left: 80px;
-font-family: 'Raleway', sans-serif;
-}
-
-.demandcolumn {
-width: 30%;
-text-align: justify;
-float: left;
-padding: 0 10px;
-}
-
-.demandcolumn2 {
-width: 29%;
-text-align: justify;
-float: left;
-padding: 0 10px;
-}
-
-.klong {
-	float: left;
-	width: 29%;
-	margin: 10px;
-}
-
-.klong2 {
-	clear: both;
-}
-
-.klong2 {
-	float: left;
-	width: 29%;
-}
-
-
-.footer {
-	clear: both;
-}
